Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.8.10 (2008/10/24)

    Bugs fixed

      - 'AccessControl.ZopeGuards.guarded_import' mapped some Unauthorized
        exceptions onto ImportErrors:  don't do that!  Also, removed
        mutable defaults from argument list, improved tests.

      - LP #281156:  'AccessControl.SecurityInfo.secureModule' dropped
        ModuleSecurity for failed imports, obscuring later attempts to
        import the same broken module.

      - LP #142667:  Updated to ZODB-3.4.5 to fix problem with product
        auto-refresh.

      - Collector #2318: Allow override of zopectl's control socket in
        zope.conf

      - integrated Hotfix-2008-08-12

  Zope 2.8.9 (2006/03/25)

    Bugs fixed

      - Collector #2294: Protected DOS-able ControlPanel methods with the
        same 'requestmethod' wrapper.

      - Collector #2294: Protected various security mutators with a new
        postonly decorator.  The decorator limits method publishing to
        POST requests only, and is a backport from Zope 2.11's requestmethod
        decorator factory.

      - Collector #2263: 'field2ulines' did not convert empty string
        correctly.

      - Collector #2237: 'make' doesn't tell you to run 'make inplace'
        before running 'make instance'.

      - Collector #2235: A number of ZCatalog methods were doing boolean
        evaluation of objects that implemented __len__ instead of checking
        them against None. Replaced a number of "if not obj" with
        "if obj is None".

      - Fix yet another resTructuredText glitch, and add tests (test
        backported from 2.9, which was not in fact vulnerable).

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

  Zope 2.8.8 (2006/07/14)

    Bugs fixed
